# cs248-vulkan-finale

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  app.cpp  app.h  basic.frag  basic.vert  camera.cpp  camera.h  constants.h  device.cpp  device.h  layouts.cpp  layouts.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  object.cpp  object.h  render_passes.cpp  render_passes.h  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  shadow.vert  sky.frag  sky.vert  structures.cpp  structures.h  texture.cpp  texture.h
